# CellularAutomaton

./: CellularAutomaton.sln
CellularAutomaton/: CMakeLists.txt  CellularAutomata.cpp  CellularAutomata.h  CellularAutomaton.vcxproj  EBO.h  Main.cpp  ShaderClass.cpp  test.txt
CellularAutomaton/Libraries/lib/: glfw3.lib
OpenGL/: CellularAutomata.cpp  EBO.cpp  Main.cpp  OpenGL.vcxproj  OpenGL.vcxproj.filters  ShaderClass.cpp  VBO.cpp  VBO.h  default.vert  glad.c
OpenGL/Libraries/include/glad/: glad.h
